--- a/projects/example/src/app/components/svg/svg.component.html
+++ b/projects/example/src/app/components/svg/svg.component.html
@@ -2,6 +2,6 @@
 
     <div *ngFor="let svg of svgs;" class="fl-ver fl-center svg-item">
         <div [xlSvg]="svg.d" style="height: 30px;width:30px;"></div>
-        <div style="font-size: 12px;max-width: 100%;" class="text-over">{{svg.k}}</div>
+        <div (click)="onItemClick(svg);" class="icon-text text-over">{{svg.k}}</div>
     </div>
 </div>
